# distbench

./: .bazelrc  .gitignore  BUILD  Makefile  README.md  WORKSPACE.bazel  activity.cc  activity.h  activity_test.cc  benchmark_utils.cc  c-thread-pool.BUILD  common_status.sh  composable_protocol_driver_test.cc  composable_rpc_counter.cc  composable_rpc_counter.h  debian_build.sh  demo.sh  deploy_to_cloudlab.sh  distbench.proto  distbench.thrift  distbench_busybox.cc  distbench_engine.cc  distbench_engine.h  distbench_engine_test.cc  distbench_netutils.cc  distbench_netutils.h  distbench_node_manager.cc  distbench_node_manager.h  distbench_node_manager_test.cc  distbench_payload.cc  distbench_payload.h  distbench_payload_test.cc  distbench_summary.cc  distbench_summary.h  distbench_test_sequencer.cc  distbench_test_sequencer.h  distbench_test_sequencer_test.cc  distbench_test_sequencer_tester.cc  distbench_test_sequencer_tester.h  distbench_thread_support.cc  (+59 more)
analysis/: BUILD  README.md  results_conversion.py  results_conversion_test.sh
analysis/golden_results/client_server_test/: client_server_1x1x1-grpc_polling_inline.config  client_server_1x1x1-grpc_polling_inline.pb
analysis/golden_results/multidimensional_test/: 2dclique_ring_x_sync_burst_5x3x100000x1024x1024-grpc_polling_inline.config  (+1 more)
base/: logging.h
docs/: cloudlab-ssh-issues.md  code-of-conduct.md  command-line.md  contributing.md  distbench-test-format.md  faq.md  getting-started.md  protocol_driver_mercury.md  quick-overview.md  service-contraints.md  thrift_how_to.md  workflow.md
git_hooks/: README.md  pre-commit
google_cloud_platform/: README.md  clean-up.sh  clean-up.yml  playbook.yml  playbook_install_blaze_localhost.yml  run_playbook.sh
google_cloud_platform/group_vars/: all.yml
homa_experiments/: cp_node_analysis.md  cp_node_analysis.py  cp_node_vs_distbench.md  cp_node_vs_distbench.sh  deploy_to_cloudlab_with_homa.sh  homa-variable-response-experiments.md  homa_test_w1.config  homa_test_w2.config  homa_test_w3.config  homa_test_w4.config  homa_test_w5.config  install_homa.sh
homa_experiments/homa_cp_node_configs/: clique_exponential_distribution_5x4xw5-grpc_polling_inline.config  clique_exponential_distribution_5x4xw5-homa.config  clique_exponential_distribution_5x5xw5-grpc_polling_inline.config
kokoro/gcp_ubuntu/: kokoro_build.sh  presubmit.cfg
kubernetes/: .gitignore  Dockerfile  README.md  build_push_docker_image.sh  create_kubernetes.sh  delete_kubernetes.sh  deployment_node_managers.yaml  deployment_test_sequencer.yaml  kube_deploy.sh  kube_undeploy.sh  service.yaml
multi_level_homa_tests/: multi_level_rpc_1x5x10000-grpc_polling_inline.config  multi_level_rpc_1x5x10000-grpc_polling_inline_var_response.config  multi_level_rpc_1x5x10000-homa.config  multi_level_rpc_1x5x10000-homa_var_response.config  multi_level_rpc_1x6x10000-homa_var_response.config
randomization/: BUILD  distribution.proto  distribution_sample_generator.cc  distribution_sample_generator.h  distribution_sample_generator_test.cc
test_builder/: BUILD  README.md  generate_test_builder_golden_configs.sh  test_builder  test_builder_test.sh
test_builder/homa_cp_node_configs/: clique_exponential_distribution_5x1xw5-grpc_polling_inline.config  clique_exponential_distribution_5x1xw5-homa.config  clique_exponential_distribution_5x2xw5-grpc_polling_inline.config  clique_exponential_distribution_5x2xw5-homa.config  clique_exponential_distribution_5x3xw5-grpc_polling_inline.config  clique_exponential_distribution_5x3xw5-homa.config  clique_exponential_distribution_5x5xw5-homa.config
test_builder/test_builder_golden_configs/: client_server_1x1x100-grpc.config  client_server_1x1x100-grpc_completion_queue_normal.config  client_server_1x1x100-grpc_polling_handoff_8.config  client_server_1x1x100-grpc_polling_inline.config  client_server_1x1x100-grpc_polling_inline_ipv4.config  client_server_1x1x100-grpc_polling_inline_ipv6.config  client_server_1x1x25-grpc.config  client_server_1x1x25-grpc_completion_queue_normal.config  client_server_1x1x25-grpc_polling_inline.config  client_server_1x6x100-grpc.config  client_server_1x6x100-grpc_completion_queue_normal.config  client_server_1x6x100-grpc_polling_inline.config  client_server_3x1x100-grpc.config  client_server_3x1x100-grpc_completion_queue_normal.config  client_server_3x1x100-grpc_polling_inline.config  clique_sync_burst_10x16000-grpc.config  clique_sync_burst_10x16000-grpc_async_callback_async_callback.config  clique_sync_burst_10x16000-grpc_async_callback_normal.config  clique_sync_burst_10x16000-grpc_callback_handoff.config  clique_sync_burst_10x16000-grpc_callback_inline.config  clique_sync_burst_10x16000-grpc_completion_queue_async_callback.config  clique_sync_burst_10x16000-grpc_completion_queue_normal.config  clique_sync_burst_10x16000-grpc_polling_handoff.config  clique_sync_burst_10x16000-grpc_polling_inline.config  clique_sync_burst_10x16000-grpc_polling_inline_homa.config  clique_sync_burst_10x16000-grpc_polling_inline_ipv4.config  clique_sync_burst_10x16000-grpc_polling_inline_ipv6.config  clique_sync_burst_10x16000-grpc_polling_inline_tcp.config  clique_sync_burst_10x16000-homa.config  clique_sync_burst_10x16000-mercury_custom_transport.config  clique_sync_burst_10x16000-mercury_ofi+tcp.config  clique_sync_burst_10x16000-mercury_ofi+tcp_ipv4_elastic.config  clique_sync_burst_10x16000-mercury_ofi+tcp_ipv6_16.config  clique_sync_burst_10x16000x1024x0-grpc_polling_inline.config  clique_sync_burst_10x16000x1024x1024-grpc_callback_handoff.config  clique_sync_burst_10x16000x1024x1024-grpc_callback_inline.config  clique_sync_burst_10x16000x1024x1024-grpc_polling_handoff.config  clique_sync_burst_10x16000x1024x1024-grpc_polling_inline.config  clique_sync_burst_10x16000x1024x1024-grpc_polling_inline_homa.config  clique_sync_burst_10x16000x1024x1024-grpc_polling_inline_ipv4.config  (+93 more)
workloads/: README.md  clique_rpc_pattern.sh  multi_level_rpc_pattern.sh  simple_client_server_rpc_pattern.sh  test_stochastic.sh  tripartite_rpc_pattern.sh
(+240 files in other folders)
