##### Simple, optional repos in the local filesystem:
##### These are only available after running setup_mercury.sh
new_local_repository(
    name = "mercury",
    path = "external_repos/opt/mercury",
    build_file = "mercury.BUILD",
)

new_local_repository(
    name = "libfabric",
    path = "external_repos/opt/libfabric",
    build_file = "libfabric.BUILD",
)

##### Helper function to fetch code via http:
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

##### Http repositories that do not require invoking any imported functions:
http_archive(
  name = "com_google_benchmark",
  sha256 = "2aab2980d0376137f969d92848fbb68216abb07633034534fc8c65cc4e7a0e93",
  strip_prefix = "benchmark-1.8.2",
  url = "https://github.com/google/benchmark/archive/refs/tags/v1.8.2.tar.gz",
)

##### Unfortunately this does not compile against the latest grpc.
http_archive(
    name = "grpc_homa",
    sha256 = "2c0fe4669620f1a685bedf2f8ad0547cccb9155d1f4b304c5f7ce362d3b92d05",
    strip_prefix = "grpc_homa-homa-2.0",
    url = "https://github.com/PlatformLab/grpc_homa/archive/refs/tags/homa-2.0.tar.gz",
    build_file = "@//:grpc_homa.BUILD",
)

http_archive(
    name = "homa_module",
    sha256 = "ab578b20263ab5e5a8e3d1b9db85ddec05523a178eced4773e47edb00035c430",
    strip_prefix = "HomaModule-1c3346972c00824c6422ec23ba3c40c87b6e5c76",
    url = "https://github.com/PlatformLab/HomaModule/archive/1c3346972c00824c6422ec23ba3c40c87b6e5c76.tar.gz",
    build_file = "@//:homa_module.BUILD",
)

##### GRPC rules: This imports a lot of dependencies for us via
##### grpc_deps() and grpc_extra_deps().
http_archive(
    name = "com_github_grpc_grpc",
    sha256 = "931f07db9d48cff6a6007c1033ba6d691fe655bea2765444bc1ad974dfc840aa",
    strip_prefix = "grpc-1.56.2",
    url = "https://github.com/grpc/grpc/archive/refs/tags/v1.56.2.tar.gz",
)
load("@com_github_grpc_grpc//bazel:grpc_deps.bzl", "grpc_deps")
grpc_deps()
load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")
grpc_extra_deps()

##### Boost rules: Imports more deps via boost_deps()
http_archive(
    name = "com_github_nelhage_rules_boost",
    sha256 = "1198cb810d18d2a86abbd4c3d71665375e2c6a2ba4044b4f9d7b2f28e6ed898e",
    strip_prefix = "rules_boost-33461a3c666af36d7a080e4fd6f554725df44132",
    url = "https://github.com/nelhage/rules_boost/archive/33461a3c666af36d7a080e4fd6f554725df44132.tar.gz",
)
load("@com_github_nelhage_rules_boost//:boost/boost.bzl", "boost_deps")
boost_deps()

##### Perform a version check on our bazel dialect:
load("@bazel_skylib//lib:versions.bzl", "versions")
versions.check(
    minimum_bazel_version = "4.2.1",
    maximum_bazel_version = "5.4.0",
)
